# agentic-kie-deploy

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  CONTRIBUTING.md  Makefile  README.md  bootstrap-backend.sh  bootstrap.sh  pyproject.toml
.github/workflows/: checks.yml  deploy-dev.yml  deploy-prod.yml
docs/adr/: 0001-event-driven-serverless-pipeline.md  0002-defer-polling-endpoint.md  0003-four-layer-bucket-hardening.md  0004-sse-s3-over-sse-kms.md  README.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf  variables.tf
infra/envs/: dev.backend.tfbackend  dev.tfvars  local.backend.tfbackend  local.tfvars  prod.backend.tfbackend  prod.tfvars
infra/iam/: .terraform.lock.hcl  backend.tfbackend  main.tf  outputs.tf  terraform.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  terraform.tf  variables.tf
